5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1635_2445.log
== TEST (2019-04-08 15:41:25) 
-- CODE:
T = input()
V = float(input())

C = (5*V/9*(F-32))
F = ((C*V/5)+32)

if (T == C):
	print(round(F, 2))
	
else: 
	print(round(C, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = (5*V/9*(F-32))
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:44:43) 
-- CODE:
T = input()
V = float(input())

C = ((5/9*F)-32)
F = ((C*V/5)+32)

if (T == C):
	print(round(F, 2))
	
else: 
	print(round(C, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = ((5/9*F)-32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:44:50) 
-- CODE:
T = input()
V = float(input())

C = ((5/9*F)-32)
F = ((C*V/5)+32)

if (T == C):
	print(round(F, 2))
	
else: 
	print(round(C, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = ((5/9*F)-32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:47:39) 
-- CODE:
T = input()
V = float(input())

C = ((5/9*F)-32)
F = ((C*9/5)+32)

if (T == C):
	print(round(F, 2))
	
else: 
	print(round(C, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = ((5/9*F)-32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:49:11) 
-- CODE:
T = input()
V = float(input())
F = ((C*9/5)+32)
C = (5/9*(F-32))


if (T == C):
	print(round(F, 2))
	
else: 
	print(round(C, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    F = ((C*9/5)+32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:49:47) 
-- CODE:
T = input()
V = float(input())

F = ((C*9/5)+32)
C = (5/9*(F-32))

if (T == C):
	print(round(F, 2))
else: 
	print(round(C, 2))
-- EXECUTION TIME:
0.13917
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 4, in <module>
    F = ((C*9/5)+32)
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:53:52) 
-- CODE:
T = input()
V = float(input())
C = (5*V-5*32)/9
F = ((9*V/5)+32)


if (T == C):
	print(round(F, 2))
else: 
	print(round(C, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:54:10) 
-- CODE:
T = input()
V = float(input())
C = (5*V-5*32)/9
F = ((9*V/5)+32)


if (T == C):
	print(round(F, 2))
else: 
	print(round(C, 2))
-- EXECUTION TIME:
0.176493
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:54:21) 
-- CODE:
T = input()
V = float(input())
C = (5*V-5*32)/9
F = ((9*V/5)+32)


if (T == "C"):
	print(round(F, 2))
else: 
	print(round(C, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:54:23) 
-- CODE:
T = input()
V = float(input())
C = (5*V-5*32)/9
F = ((9*V/5)+32)


if (T == "C"):
	print(round(F, 2))
else: 
	print(round(C, 2))
-- EXECUTION TIME:
0.138764
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
